--- a/src/res/locales/app.gl-ES.po
+++ b/src/res/locales/app.gl-ES.po
@@ -84,7 +84,7 @@ msgstr "Cancelar"
 
 #: This will close all KiwiIRC conversations. Are you sure you want to close this window?
 msgid "window_unload"
-msgstr ""
+msgstr "Van pechar todas as conversacións de KiwiIRC. Seguro que queres pechar esta xanela?"
 
 #: Realname field in a users whois
 msgid "whois_realname"
