--- a/src/res/locales/app.uk-UA.po
+++ b/src/res/locales/app.uk-UA.po
@@ -84,7 +84,7 @@ msgstr "Скасувати"
 
 #: This will close all KiwiIRC conversations. Are you sure you want to close this window?
 msgid "window_unload"
-msgstr ""
+msgstr "Це закриє усі розмови KiwiIRC. Ви дійсно хочете закрити це вікно?"
 
 #: Realname field in a users whois
 msgid "whois_realname"
