Github Issue #135. Option to disable nickname colouring in messages.

--- a/src/res/locales/app.en-US.po
+++ b/src/res/locales/app.en-US.po
@@ -166,6 +166,10 @@ msgstr "Messages in scrollback"
 msgid "settings_formatting"
 msgstr "Extra formatting"
 
+#: Nickname Colouring
+msg "settings_nick_colouring"
+msgstr: "Colour nicknames in messages"
+
 #: Include join/part messages as activity
 msgid "settings_show_joinpart"
 msgstr "Include join/part messages as activity"
