--- a/src/res/locales/app.he-IL.po
+++ b/src/res/locales/app.he-IL.po
@@ -166,6 +166,11 @@ msgstr "הודעות בגלילה לאחורה"
 msgid "settings_formatting"
 msgstr "עיצוב נוסף"
 
+#: Nickname Colouring
+msg "settings_nick_colouring"
+msgstr: "צבע את כינויי המשתמשים בהודעות"
+
+
 #: Include join/part messages as activity
 msgid "settings_show_joinpart"
 msgstr "הצג הודעות כניסה ויציאה"
