--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -174,8 +174,8 @@ msgid "settings_formatting"
 msgstr "Extra formatting"
 
 #: Nickname Colouring
-msg "settings_nick_colouring"
-msgstr: "Colour nicknames in messages"
+msgid "settings_nick_colouring"
+msgstr "Colour nicknames in messages"
 
 #: Include join/part messages as activity
 msgid "settings_show_joinpart"
