refs #141: Adding options to show/hide topics, nick changes and mode changes in buffer settings.

--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -439,6 +439,18 @@ msgstr "Your settings"
 msgid "side_joins"
 msgstr "Show when people join"
 
+#: Show when channel topic changes
+msgid "side_topics"
+msgstr "Show when channel topic changes"
+
+#: Show when users change their nicks
+msgid "side_nick_changes"
+msgstr "Show when users change their nicks"
+
+#: Show when users change channel modes
+msgid "side_mode_changes"
+msgstr "Show when users change channel modes"
+
 #: Extra message formatting
 msgid "side_formatting"
 msgstr "Extra message formatting"
