Translating welcome and start button strings.

--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -1,5 +1,13 @@
 #: Common Strings
 
+#: Start
+msgid "start_button"
+msgstr "Start"
+
+#: Welcome to Kiwi IRC!
+msgid "start_greeting"
+msgstr "Welcome to Kiwi IRC!"
+
 #: Close
 msgid "close"
 msgstr "Close"
