--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -233,6 +233,10 @@ msgstr "Never"
 msgid "settings_notify_mute"
 msgstr "Mute sounds"
 
+#: Hide unread message count
+msgid "settings_show_message_counts"
+msgstr "Hide count"
+
 #: Operator tools
 msgid "operator_tools"
 msgstr "Operator tools"
