--- a/src/res/locales/app.fr-FR.po
+++ b/src/res/locales/app.fr-FR.po
@@ -11,15 +11,15 @@ msgstr ""
 "Last-Translator: kiwiirc <darren@kiwiirc.com>\n"
 "Language-Team: French\n"
 "Language: fr_FR\n"
-"PO-Revision-Date: 2018-01-18 09:50-0500\n"
+"PO-Revision-Date: 2018-01-20 07:00-0500\n"
 
 #: Start
 msgid "start_button"
-msgstr ""
+msgstr "Démarrer"
 
 #: Welcome to Kiwi IRC!
 msgid "start_greeting"
-msgstr ""
+msgstr "Bienvenue sur Kiwi IRC !"
 
 #: Close
 msgid "close"
@@ -107,7 +107,7 @@ msgstr "Annuler"
 
 #: This will close all KiwiIRC conversations. Are you sure you want to close this window?
 msgid "window_unload"
-msgstr ""
+msgstr "Vous allez fermer toutes les conversations sur KiwiIRC. Voulez-vous vraiment fermer cette fenêtre ?"
 
 #: Real name
 msgid "whois_realname"
@@ -191,7 +191,7 @@ msgstr "Formatage supplémentaire"
 
 #: Colour nicknames in messages
 msgid "settings_nick_colouring"
-msgstr ""
+msgstr "Coloriser les pseudos dans les messages"
 
 #: Include join/part messages as activity
 msgid "settings_show_joinpart"
@@ -235,7 +235,7 @@ msgstr "Désactiver son"
 
 #: Hide unread message count
 msgid "settings_show_message_counts"
-msgstr ""
+msgstr "Masquer le nombre de messages non lus"
 
 #: Operator tools
 msgid "operator_tools"
@@ -411,15 +411,15 @@ msgstr "Afficher les entrées/sorties"
 
 #: Show when channel topic changes
 msgid "side_topics"
-msgstr ""
+msgstr "Afficher les changements de sujet"
 
 #: Show when users change their nicks
 msgid "side_nick_changes"
-msgstr ""
+msgstr "Afficher les changements de pseudo"
 
 #: Show when users change channel modes
 msgid "side_mode_changes"
-msgstr ""
+msgstr "Afficher les changements de mode"
 
 #: Extra message formatting
 msgid "side_formatting"
