--- a/src/res/locales/app.bg-BG.po
+++ b/src/res/locales/app.bg-BG.po
@@ -8,7 +8,7 @@ msgstr ""
 "X-Crowdin-File: /master/src/res/locales/app.dev.po\n"
 "Project-Id-Version: kiwiirc\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Last-Translator: kiwiirc <darren@kiwiirc.com>\n"
+"Last-Translator: A. Indzhov <al@abvnet.org>\n"
 "Language-Team: Bulgarian\n"
 "Language: bg_BG\n"
 "PO-Revision-Date: 2018-01-19 03:51-0500\n"
