--- a/src/res/locales/app.bg-BG.po
+++ b/src/res/locales/app.bg-BG.po
@@ -11,7 +11,7 @@ msgstr ""
 "Last-Translator: kiwiirc <darren@kiwiirc.com>\n"
 "Language-Team: Bulgarian\n"
 "Language: bg_BG\n"
-"PO-Revision-Date: 2018-01-19 03:51-0500\n"
+"PO-Revision-Date: 2018-02-06 07:12-0500\n"
 
 #: Start
 msgid "start_button"
@@ -63,7 +63,7 @@ msgstr "Парола"
 
 #: I have a password
 msgid "password_have"
-msgstr "Вече имам парола."
+msgstr "Имам парола."
 
 #: Server
 msgid "server"
@@ -415,7 +415,7 @@ msgstr "Показва кога се променя темата на канал
 
 #: Show when users change their nicks
 msgid "side_nick_changes"
-msgstr "Показва когато портебителя смени ник-а си."
+msgstr "Показва кога портебителя си сменя ник-а."
 
 #: Show when users change channel modes
 msgid "side_mode_changes"
