--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -602,53 +602,57 @@ msgstr "Ban and kick from the channel"
 
 #: Mode Changes $t('modes_')
 
-#: Give ops
+#: {{nick}} gives ops to {{target}}
 msgid "modes_give_ops"
-msgstr "gives ops to"
+msgstr "{{nick}} gives ops to {{target}}"
 
-#: Take ops
+#: {{nick}} takes ops from {{target}}
 msgid "modes_take_ops"
-msgstr "takes ops from"
+msgstr "{{nick}} takes ops from {{target}}"
 
-#: Give half-ops
+#: {{nick}} gives half-ops to {{target}}
 msgid "modes_give_halfops"
-msgstr "gives half-ops to"
+msgstr "{{nick}} gives half-ops to {{target}}"
 
-#: Take half-ops
+#: {{nick}} takes half-ops from {{target}}
 msgid "modes_take_halfops"
-msgstr "takes half-ops from"
+msgstr "{{nick}} takes half-ops from {{target}}"
 
-#: Give voice
+#: {{nick}} gives voice to {{target}}
 msgid "modes_give_voice"
-msgstr "gives voice to"
+msgstr "{{nick}} gives voice to {{target}}"
 
-#: Take voice
+#: {{nick}} takes voice from {{target}}
 msgid "modes_take_voice"
-msgstr "takes voice from"
+msgstr "{{nick}} takes voice from {{target}}"
 
-#: Give admin
+#: {{nick}} gives admin to {{target}}
 msgid "modes_give_admin"
-msgstr "gives admin to"
+msgstr "{{nick}} gives admin to {{target}}"
 
-#: Take admin
+#: {{nick}} takes admin from {{target}}
 msgid "modes_take_admin"
-msgstr "takes admin from"
+msgstr "{{nick}} takes admin from {{target}}"
 
-#: Give owner
+#: {{nick}} gives owner to {{target}}
 msgid "modes_give_owner"
-msgstr "gives owner to"
+msgstr "{{nick}} gives owner to {{target}}"
 
-#: Take owner
+#: {{nick}} takes owner from {{target}}
 msgid "modes_take_owner"
-msgstr "takes owner from"
+msgstr "{{nick}} takes owner from {{target}}"
 
-#: Prepend unknown mode eg. sets +k on: %target
-msgid "modes_other_prepend"
-msgstr "sets"
+#: {{nick}} has banned {{target}}
+msgid "modes_gives_ban"
+msgstr "{{nick}} has banned {{target}}"
 
-#: Append unknown mode 
-msgid "modes_other_append"
-msgstr "on"
+#: {{nick}} has unbanned {{target}}
+msgid "modes_takes_ban"
+msgstr "{{nick}} has unbanned {{target}}"
+
+#: {{nick}} sets {{mode}} on {{target}}
+msgid "modes_other"
+msgstr "{{nick}} sets {{mode}} on {{target}}"
 
 
 
