Add missing string

--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -706,6 +706,10 @@ msgstr "Connected"
 msgid "disconnected"
 msgstr "Disconnected"
 
+#: Connected to
+msgid "connected_to"
+msgstr "Connected to"
+
 #: Has joined
 msgid "has_joined"
 msgstr "has joined"
