--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -145,6 +145,10 @@ msgstr "Theme URL"
 msgid "settings_use_monospace"
 msgstr "Use monospace"
 
+#: Display Colour Picker
+msgid "settings_display_colour_picker"
+msgstr "Display text colour picker"
+
 #: Traditional IRC layout
 msgid "settings_layout_compact"
 msgstr "Traditional IRC layout"
